# cuNVSM

./: .gitignore  CMakeLists.txt  LICENSE  PRODUCT_SUBSTITUTABILITY.md  README.md  TESTS.md  TUTORIAL.md  rank-cranfield-collection.sh  requirements.txt  visualize-reuters-collection.sh
cpp/: CMakeLists.txt  cuda_utils.cu  cuda_utils_tests.cu  cudnn_utils.cu  cudnn_utils_tests.cu  data.cu  data_async.cpp  data_indri.cpp  data_multi.cpp  data_repeating.cpp  data_tests.cpp  gradient_check.cu  gradient_checking_tests.cu  hdf5.cu  intermediate_results.cu  intermediate_results_tests.cu  labels.cu  main.cu  model.cu  model_tests.cu  objective.cu  params.cu  storage.cu  updates.cu  updates_adagrad.cu  updates_adam.cu  updates_tests.cu  utils_tests.cpp
include/cuNVSM/: base.h  c++14.h  cuda_utils.h  cudnn_utils.h  data.h  gradient_check.h  hdf5.h  intermediate_results.h  labels.h  lse_hdf5_inl.h  model.h  objective.h  params.h  storage.h  storage_inl.h  tests_base.h  tests_base_cuda.h  updates.h
proto/: nvsm.proto
py/: CMakeLists.txt  combine_runs.py  dump_vocabulary_list.py  extract_reuters.py  query.py  visualize.py
py/nvsm/: base.py
resources/adhoc-splits/ap_88_89/: test  validation
resources/adhoc-splits/disk4_disk5_no-cr/: test  validation
resources/adhoc-splits/ft/: test  validation
resources/adhoc-splits/latimes/: test  validation
resources/adhoc-splits/wsj/: test  validation
resources/product-substitutability/electronics/: product_list  qrel_test  qrel_validation  topics
resources/product-substitutability/sports_and_outdoors/: substitutes
resources/product-substitutability/toys_and_games/: product_list  qrel_test  qrel_validation  topics
scripts/: functions.sh
test_data/Brown_index/: manifest
test_data/Brown_index/collection/: forwardLookup0  lookup  manifest  reverseLookup0
test_data/Brown_index/index/0/: directFile  documentLengths  documentStatistics  frequentID  frequentString  frequentTerms  infrequentID  infrequentString  invertedFile  manifest
test_data/cranfield_collection/: cranfield.qrel  cranfield.topics  cranfield.trectext
